migrator-tests/tests/snapshots/generate_old__oneway_migrations-10.snap
---
source: migrator-tests/tests/generate_old.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "createdAt": "DEFINE FIELD createdAt ON eats TYPE datetime PERMISSIONS FULL",
        "id": "DEFINE FIELD id ON eats TYPE record<eats> PERMISSIONS FULL",
        "in": "DEFINE FIELD in ON eats TYPE record<any> PERMISSIONS FULL",
        "out": "DEFINE FIELD out ON eats TYPE record<any> PERMISSIONS FULL",
        "place": "DEFINE FIELD place ON eats TYPE string PERMISSIONS FULL",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
