migrator-tests/tests/snapshots/generate_old__oneway_migrations-11.snap
---
source: migrator-tests/tests/generate_old.rs
expression: "fields_info.as_ref().unwrap().values().map(|v|\n                v.keys().map(|k|\n                                k.to_string()).collect::<Vec<_>>().join(\", \")).collect::<Vec<_>>().join(\"\\n\")"
---

checksum_up, id, name, timestamp



