migrator-tests/tests/snapshots/generate_old__oneway_migrations-16.snap
---
source: migrator-tests/tests/generate_old.rs
expression: fields_info.unwrap()
---
{
    "events": {},
    "fields": {
        "age": "DEFINE FIELD age ON student TYPE int PERMISSIONS FULL",
        "createdAt": "DEFINE FIELD createdAt ON student TYPE datetime PERMISSIONS FULL",
        "id": "DEFINE FIELD id ON student TYPE record<student> PERMISSIONS FULL",
        "university": "DEFINE FIELD university ON student TYPE string PERMISSIONS FULL",
        "updatedAt": "DEFINE FIELD updatedAt ON student TYPE datetime PERMISSIONS FULL",
    },
    "indexes": {},
    "lives": {},
    "tables": {},
}
