migrator-tests/tests/snapshots/generate_old__oneway_migrations-3.snap
---
source: migrator-tests/tests/generate_old.rs
expression: "table_defs.join(\"\\n\")"
---
DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE;
DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE;
DEFINE TABLE eats SCHEMAFULL PERMISSIONS NONE;
DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE;
DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE;
DEFINE TABLE student SCHEMAFULL PERMISSIONS NONE;
