migrator-tests/tests/snapshots/generate_old__oneway_migrations-4.snap
---
source: migrator-tests/tests/generate_old.rs
expression: db_info().await.unwrap()
---
DbInfo {
    analyzers: Analyzers(
        Info(
            {},
        ),
    ),
    functions: Functions(
        Info(
            {},
        ),
    ),
    params: Params(
        Info(
            {},
        ),
    ),
    scopes: Scopes(
        Info(
            {},
        ),
    ),
    tables: Tables(
        Info(
            {
                "animal": DefineStatementRaw(
                    "DEFINE TABLE animal SCHEMAFULL PERMISSIONS NONE",
                ),
                "crop": DefineStatementRaw(
                    "DEFINE TABLE crop SCHEMAFULL PERMISSIONS NONE",
                ),
                "eats": DefineStatementRaw(
                    "DEFINE TABLE eats SCHEMAFULL PERMISSIONS NONE",
                ),
                "migration": DefineStatementRaw(
                    "DEFINE TABLE migration SCHEMAFULL PERMISSIONS NONE",
                ),
                "planet": DefineStatementRaw(
                    "DEFINE TABLE planet SCHEMAFULL PERMISSIONS NONE",
                ),
                "student": DefineStatementRaw(
                    "DEFINE TABLE student SCHEMAFULL PERMISSIONS NONE",
                ),
            },
        ),
    ),
    tokens: Tokens(
        Info(
            {},
        ),
    ),
    users: Users(
        Info(
            {},
        ),
    ),
}
