migrator-tests/tests/snapshots/generate_old__oneway_migrations-5.snap
---
source: migrator-tests/tests/generate_old.rs
expression: "fields_info.as_ref().unwrap().values().map(|v|\n                v.keys().map(|k|\n                                k.to_string()).collect::<Vec<_>>().join(\", \")).collect::<Vec<_>>().join(\"\\n\")"
---
event1, event2
attributes, createdAt, id, species, updatedAt, velocity
species_speed_idx


